--- a/sourse/pug/blocks/sAside/_sAside.pug
+++ b/sourse/pug/blocks/sAside/_sAside.pug
@@ -34,9 +34,13 @@ mixin sAside()
 		+gr("Гранты физ. и юр. лицам","Количество выданных грантов","150 шт.","Объем грантовых средств","552 000 000 руб.")
 		+gr("","Численность молодежи, зедействованной в программных мероприятиях по всем направлениям","150 000 чел.")
 		+gr("","Количество детских и молодежных общественных объединений, всего","150 ")
-		
+
 mixin sAside5()
-	+sAsideBody('Общие данные по Разделу 1')
+	+sAsideBody('Общие данные по Разделу 2')
+		+e.group
+			.row.align-items-center
+				.col.text-secondary.fw-500 Количество структур
+				.col-auto.h6-mb-0.strong 250 ед.
 		mixin gr(t,t1,t2,t3,t4)
 			+e.group
 				if t
@@ -48,7 +52,30 @@ mixin sAside5()
 					+e.group-item
 						.small.mb-1= t3
 						.h6.strong= t4
-		+gr("Объем финансирования","Бюджет субъекта РФ","25 000 000 руб.","Местный бюджет","5 000 000 руб.")
-		+gr("Гранты физ. и юр. лицам","Количество выданных грантов","150 шт.","Объем грантовых средств","552 000 000 руб.")
-		+gr("","Численность молодежи, зедействованной в программных мероприятиях по всем направлениям","150 000 чел.")
-		+gr("","Количество детских и молодежных общественных объединений, всего","150 ")
+				block
+		+gr("Количество сотрудников","Всего","600 чел.","Имеющих профильное образование","600 чел.")
+			+e.group-item
+				.small.mb-1 Направлены на работу с молодежью
+				.h6.strong 600 чел.
+		+gr("Объем финансирования","Расходы на организацию и проведение мероприятий, содействие в организации и проведении мероприятий","552 000 000 руб.","Расходы на выполнение административных функций","52 000 000 руб.")
+			+e.group-item
+				.small.mb-1 Расходы на ремонт и капитальное строительство
+				.h6.strong 52 000 000 руб.
+
+				
+mixin sAside6()
+	+sAsideBody('Общие данные по Разделу 3')
+		+e.group
+			.row.align-items-center
+				.col.text-secondary.fw-500 Количество структур
+				.col-auto.h6-mb-0.strong 250 ед.
+		mixin gr(t,t2)
+			+e.group
+				if t
+					.text-secondary.mb-3= t
+					.h6.strong= t2 
+				block
+		+gr("Всего материалов","250 ед.")
+		+gr("Финансирование","150 000 000 руб.")
+		+gr("Пользователей оф. сайта","150 000 чел.")
+		+gr("Подписчиков в соц. сетях","50 000 чел.")
