--- a/sourse/pug/pages/06.pug
+++ b/sourse/pug/pages/06.pug
@@ -17,8 +17,8 @@ block pagecontent
 	+top-nav()
 	.main-block
 		.container-fluid
-			+sTable
-			+sAside5
+			+sTable6
+			+sAside6
 	+footer()
 
 
