--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -3,12 +3,12 @@
 	margin-right: auto;
 	max-width: 1150px;
 }
-body.btn-success{
+body.bg-success{
 
 	.footer{
 		.container-fluid{
 
-			padding-right: 15px;
+			padding-right: 15px !important;
 		}
 		max-width: none;
 	}
