--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -9,15 +9,31 @@
 	font-size:(24/10)*1rem;
 	width:(22/24)*1em;
 }
+.icon-bell {
+	font-size:(24/10)*1rem;
+	width:(24/24)*1em;
+}
 .icon-check {
 	font-size:(27/10)*1rem;
 	width:(27/27)*1em;
+}
+.icon-close {
+	font-size:(24/10)*1rem;
+	width:(24/24)*1em;
+}
+.icon-danger {
+	font-size:(24/10)*1rem;
+	width:(24/24)*1em;
 }
 .icon-fb {
 	font-size:(24/10)*1rem;
 	width:(24/24)*1em;
 }
 .icon-instagram {
+	font-size:(24/10)*1rem;
+	width:(24/24)*1em;
+}
+.icon-success {
 	font-size:(24/10)*1rem;
 	width:(24/24)*1em;
 }
