--- a/sourse/pug/blocks/form-wrap/form-wrap.scss
+++ b/sourse/pug/blocks/form-wrap/form-wrap.scss
@@ -245,3 +245,68 @@
 .select2-container--default .select2-results__option--highlighted[aria-selected]{
 	background-color: $success;
 }
+
+.form-group.is-invalid{
+	position: relative;
+	 &:hover{
+		 .form-group-alert{
+			 	&__text {
+					 visibility: visible;
+					 opacity: 1;
+					 z-index: 2;
+				 }
+		 }
+	 }
+ 
+}
+
+.form-group-alert{ 
+cursor: pointer;
+	position: absolute;
+	width: 1rem;
+	height: 1rem;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #ffffff;
+	background-color: $danger;
+	font-size: rem(13);
+	top: -.5rem;
+	right: 0rem;
+	font-weight: bold;
+	z-index: 10;
+	&__text{
+		@include mt;
+			visibility: hidden;
+			opacity: 0;
+			z-index: -1;
+		position: absolute;
+		top: calc(100% + 15px);
+		width: rem(220);
+		color: $body-color;
+		background: #FFFFFF;
+		/* 2 */
+
+		box-shadow: 0px 6px 10px #BDC1C1;
+		font-weight: normal;
+		font-weight: 500;
+		font-size: rem(14);
+		left: 50%;
+	 
+		padding: rem(10) rem(14);
+		&::before{
+			content: '';
+			position: absolute;
+			bottom: 100%;
+			left: 0;
+			@include triangle(12px, #fff, down-left);
+		}
+	}
+}
+.popover-body{
+	font-weight: 500;
+	padding: rem(15);
+	box-shadow: 0px 14px 20px #BDC1C1;
+	font-size: rem(14);
+}
