--- a/sourse/pug/blocks/sTable/_sTable.pug
+++ b/sourse/pug/blocks/sTable/_sTable.pug
@@ -2,6 +2,7 @@ mixin td(t, p)
 	+e.td.col.form-group&attributes(attributes)
 		input.form-control.form-control-sm(type="text" value= t placeholder="0")&attributes(attributes)
 		+e.after-text= p
+		block
 	// /+e.td.col.form-group
 mixin td2(t, p)
 	.form-group&attributes(attributes)
@@ -29,7 +30,7 @@ mixin sTable()
 		+e.head
 			.row
 				mixin title(t, t2)
-					+e.th.col(data-title= t2)!= t
+					+e.th.col(data-title= t2 data-toggle="popover"    data-placement="auto" data-content="Численность молодежи, зедействованной в программных мероприятиях по всем направлениям")!= t
 				+title(`Бюджет <br> субъекта РФ`)
 				+title(`Местный <br> бюджет`)
 				+title(`Количество <br> выданных грантов`)
@@ -44,10 +45,12 @@ mixin sTable()
 					+e.row.row
 						+td('10 000 000','Р.')(class="is-valid")
 						+td('3 000 000','ШТ.')(class="is-invalid")
+							+b.form-group-alert(data-toggle="popover"    data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020") i 
 						+td('10 ','Р.')
 						+td('500 000','Р.')
 						+td('150','Ч.')
-						+td('','Р.')
+						+td('','Р.')(class="is-invalid")
+							+b.form-group-alert(data-toggle="popover"    data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020") i 
 			+e.group-tr
 				p.strong  1. Вовлеченность молодежи в инновационную деятельность и научно-техническое творчество
 			
