--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -1,7 +1,12 @@
 .top-nav {
 	padding-top: rem(8);
 	padding-bottom: rem(8);
-	background: rgba(221, 226, 229, 0.5);
+	background: #EBEEEF;
+	position: sticky;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 1000;
  
 	// 
 	@include media-breakpoint-up(xl) {}
