--- a/sourse/pug/pages/layout/js-css.pug
+++ b/sourse/pug/pages/layout/js-css.pug
@@ -24,6 +24,7 @@ mixin allcjs()
 	script(src="libs/swiper/js/swiper.min.js")
 	//- script(src="libs/slick-carousel/slick/slick.min.js")
 
+	script(src="libs/hc-sticky/hc-sticky.js")
 	script(src="js/common.js")
 	//- cut text libs
 	//- script(src="libs/jquery.morelines.min.js")
