--- a/sourse/pug/blocks/form-wrap/form-wrap.scss
+++ b/sourse/pug/blocks/form-wrap/form-wrap.scss
@@ -310,3 +310,8 @@ cursor: pointer;
 	box-shadow: 0px 14px 20px #BDC1C1;
 	font-size: rem(14);
 }
+
+.form-group{
+	margin-bottom: 0;
+	padding-bottom: 1rem;
+}
