--- a/sourse/pug/blocks/sTable/_sTable.scss
+++ b/sourse/pug/blocks/sTable/_sTable.scss
@@ -5,6 +5,11 @@
 		position: relative;
 		// overflow-x: auto;
 		overflow-y: hidden;
+		p,
+		.strong{
+		 position: relative;
+		 z-index: 3;
+		}
 		&__head{
 			padding-right: 20px;
 			position: sticky;
@@ -41,8 +46,11 @@
 			
 		}
 		&__body{ 
-			padding-top: rem(16);
 			padding-right: 20px;
+			.col-top{
+				padding-top: rem(16);
+
+			}
 	p {
 		margin-bottom: rem(10);
 	}
@@ -70,6 +78,8 @@
 		}
 		&__group-tr{
 			padding-bottom: rem(36);
+			position: relative;
+			z-index: 2;
 		}
 
 		 &__col {
@@ -111,3 +121,43 @@
 	margin-top: rem(30);
 	margin-bottom: var(--sPB);
 }
+.col--hover,
+.sTable__th,
+.sTable__td {
+	@include mt;
+	// padding-bottom: 50px;
+	position: relative;
+	z-index: 2;
+	&::before{
+		content: '';
+		top: 0;
+		// @include a-cent(y);
+		position: absolute;
+		left: 0;
+		width: 100%;
+		background-color: #DBF0F1;
+		@include mt;
+		height: 100%;
+		z-index: -1;
+		opacity: 0;
+		// pointer-events: none;
+	}
+
+	&.bg-hover{
+		&::before{
+
+			opacity: 1;
+		}
+	}
+}
+	.sTable__td {
+		&::before {
+
+			height: 500px;
+			top: 0;
+		}
+	}
+	.z5{
+		position: relative;
+		z-index: 5;
+	}
