--- a/sourse/pug/blocks/topLine/_topLine.scss
+++ b/sourse/pug/blocks/topLine/_topLine.scss
@@ -14,6 +14,8 @@
 	.topLine {
 		padding-top: rem(14);
 		padding-bottom: rem(14);
+		position: relative;
+		z-index: 1005;
 		.row{
 			align-items: center;
 		}
