--- a/sourse/sass/_root.scss
+++ b/sourse/sass/_root.scss
@@ -9,8 +9,8 @@
 		--sPT: #{rem(40)};
 		--sPB: #{rem(40)}; 
 	}
-	--sPT: #{rem(40 / 2)};
-	--sPB: #{rem(40 / 2)};
+	--sPT: #{rem(40 * 0.5)};
+	--sPB: #{rem(40 * 0.5)};
 	--sTPB: #{rem(40)};
  
 
