--- a/sourse/sass/_mixin.scss
+++ b/sourse/sass/_mixin.scss
@@ -1,4 +1,6 @@
 // mixin для Фона
+@use "sass:math";
+
 @mixin bg($src, $media:xy, $path:xy) {
   @if $media==xy {
     @if $path==xy {
@@ -162,7 +164,7 @@
     position: relative;
     height: 0;
     display: block;
-    padding-bottom: ($h/$w *100%);
+    padding-bottom: (math.div($h, $w) *100%);
   }
 }
 
