--- a/sourse/pug/blocks/sGoalsPriorities/_sGoalsPriorities.scss
+++ b/sourse/pug/blocks/sGoalsPriorities/_sGoalsPriorities.scss
@@ -15,6 +15,9 @@
 	@include media-breakpoint-only(xl) {}
 	@include media-breakpoint-down(xl) {}
 	counter-reset: num;
+	&__btn-wrap{
+		margin: rem(66) 0 rem(40);
+	}
 } // end.sGoalsPriorities
 
 
