--- a/sourse/pug/blocks/sGoalsPriorities/_sGoalsPriorities.pug
+++ b/sourse/pug/blocks/sGoalsPriorities/_sGoalsPriorities.pug
@@ -174,9 +174,9 @@ mixin sGoalsPriorities(data)
 						+input('0').text-right
 		+e.btn-wrap
 			.row.justify-content-between
-				.col-3 
+				.col
 					+e.A.btn.btn.btn-outline-success Назад
-				.col-3
+				.col-auto
 					+e.A.btn.btn.btn-success Далее
 
 	// end sGoalsPriorities
