--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -484,3 +484,20 @@ body{
 		}
 	}
 	}
+
+	
+	.sStartSection .form-wrap.tabs {
+		@media (min-width: 576px){
+			max-width: rem(450);
+			width: 100%;
+			margin-left: auto;
+			margin-right: auto;
+		}
+		max-width: rem(450);
+		width: 100%;
+
+	}
+
+.bg-success-new{
+	background: #8C64D8 !important;
+}
