добавил необходимые библиотеки

--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -43,6 +43,8 @@ $output-bourbon-deprecation-warnings: false;
 @import "./node_modules/bootstrap/scss/navbar";
 @import "./node_modules/bootstrap/scss/card";
 @import "./node_modules/bootstrap/scss/breadcrumb";
+@import "./node_modules/bootstrap/scss/pagination";
+@import "./node_modules/bootstrap/scss/alert";
 // .breadcrumb{
 //   .active{
 //     a{
